--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,7 +1,7 @@
 name: snowflakeDemoDev
 profile: snowflake-demoDev
 version: '2.2'
-require-dbt-version: [">=0.14.0", "<=0.15.2"]
+require-dbt-version: [">=0.14.0", "<0.17.0"]
 
 analysis-paths:
 - analysis
