--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,3 @@
 packages:
-  - git: "https://github.com/Datavault-UK/dbtvault"
-    revision: v0.5
+  - git: https://github.com/mirasmerda/dbtvault
+    revision: multiplatform
