adapt satellite models to bq

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -156,142 +156,142 @@ models:
         sat_inv_inventory_details:
           vars:
             source: 'v_stg_inventory'
-            src_pk: 'INVENTORY_PK'
-            src_hashdiff: 'INVENTORY_HASHDIFF'
+            src_pk: 'inventory_pk'
+            src_hashdiff: 'inventory_hashdiff'
             src_payload:
-              - 'AVAILQTY'
-              - 'SUPPLYCOST'
-              - 'PART_SUPPLY_COMMENT'
-            src_eff: 'EFFECTIVE_FROM'
-            src_ldts: 'LOADDATE'
-            src_source: 'SOURCE'
+              - 'availqty'
+              - 'supplycost'
+              - 'part_supply_comment'
+            src_eff: 'effective_from'
+            src_ldts: 'loaddate'
+            src_source: 'source'
         sat_inv_part_details:
           vars:
             source: 'v_stg_inventory'
-            src_pk: 'PART_PK'
-            src_hashdiff: 'PART_HASHDIFF'
+            src_pk: 'part_pk'
+            src_hashdiff: 'part_hashdiff'
             src_payload:
-              - 'PART_NAME'
-              - 'PART_MFGR'
-              - 'PART_BRAND'
-              - 'PART_TYPE'
-              - 'PART_SIZE'
-              - 'PART_CONTAINER'
-              - 'PART_RETAILPRICE'
-              - 'PART_COMMENT'
-            src_eff: 'EFFECTIVE_FROM'
-            src_ldts: 'LOADDATE'
-            src_source: 'SOURCE'
+              - 'part_name'
+              - 'part_mfgr'
+              - 'part_brand'
+              - 'part_type'
+              - 'part_size'
+              - 'part_container'
+              - 'part_retailprice'
+              - 'part_comment'
+            src_eff: 'effective_from'
+            src_ldts: 'loaddate'
+            src_source: 'source'
         sat_inv_supp_nation_details:
           vars:
             source: 'v_stg_inventory'
-            src_pk: 'SUPPLIER_PK'
-            src_hashdiff: 'SUPPLIER_NATION_HASHDIFF'
+            src_pk: 'supplier_pk'
+            src_hashdiff: 'supplier_nation_hashdiff'
             src_payload:
-              - 'SUPPLIER_NATION_NAME'
-              - 'SUPPLIER_NATION_COMMENT'
-            src_eff: 'EFFECTIVE_FROM'
-            src_ldts: 'LOADDATE'
-            src_source: 'SOURCE'
+              - 'supplier_nation_name'
+              - 'supplier_nation_comment'
+            src_eff: 'effective_from'
+            src_ldts: 'loaddate'
+            src_source: 'source'
         sat_inv_supp_region_details:
           vars:
             source: 'v_stg_inventory'
-            src_pk: 'SUPPLIER_PK'
-            src_hashdiff: 'SUPPLIER_REGION_HASHDIFF'
+            src_pk: 'supplier_pk'
+            src_hashdiff: 'supplier_region_hashdiff'
             src_payload:
-              - 'SUPPLIER_REGION_NAME'
-              - 'SUPPLIER_REGION_COMMENT'
-            src_eff: 'EFFECTIVE_FROM'
-            src_ldts: 'LOADDATE'
-            src_source: 'SOURCE'
+              - 'supplier_region_name'
+              - 'supplier_region_comment'
+            src_eff: 'effective_from'
+            src_ldts: 'loaddate'
+            src_source: 'source'
         sat_inv_supplier_details:
           vars:
             source: 'v_stg_inventory'
-            src_pk: 'SUPPLIER_PK'
-            src_hashdiff: 'SUPPLIER_HASHDIFF'
+            src_pk: 'supplier_pk'
+            src_hashdiff: 'supplier_hashdiff'
             src_payload:
-              - 'SUPPLIER_ADDRESS'
-              - 'SUPPLIER_PHONE'
-              - 'SUPPLIER_ACCTBAL'
-              - 'SUPPLIER_NAME'
-              - 'SUPPLIER_COMMENT'
-            src_eff: 'EFFECTIVE_FROM'
-            src_ldts: 'LOADDATE'
-            src_source: 'SOURCE'
+              - 'supplier_address'
+              - 'supplier_phone'
+              - 'supplier_acctbal'
+              - 'supplier_name'
+              - 'supplier_comment'
+            src_eff: 'effective_from'
+            src_ldts: 'loaddate'
+            src_source: 'source'
         sat_order_cust_nation_details:
           vars:
             source: 'v_stg_orders'
-            src_pk: 'CUSTOMER_PK'
-            src_hashdiff: 'CUSTOMER_NATION_HASHDIFF'
+            src_pk: 'customer_pk'
+            src_hashdiff: 'customer_nation_hashdiff'
             src_payload:
-              - 'CUSTOMER_NATION_NAME'
-              - 'CUSTOMER_NATION_COMMENT'
-            src_eff: 'EFFECTIVE_FROM'
-            src_ldts: 'LOADDATE'
-            src_source: 'SOURCE'
+              - 'customer_nation_name'
+              - 'customer_nation_comment'
+            src_eff: 'effective_from'
+            src_ldts: 'loaddate'
+            src_source: 'source'
         sat_order_cust_region_details:
           vars:
             source: 'v_stg_orders'
-            src_pk: 'CUSTOMER_PK'
-            src_hashdiff: 'CUSTOMER_REGION_HASHDIFF'
+            src_pk: 'customer_pk'
+            src_hashdiff: 'customer_region_hashdiff'
             src_payload:
-              - 'CUSTOMER_REGION_NAME'
-              - 'CUSTOMER_REGION_COMMENT'
-            src_eff: 'EFFECTIVE_FROM'
-            src_ldts: 'LOADDATE'
-            src_source: 'SOURCE'
+              - 'customer_region_name'
+              - 'customer_region_comment'
+            src_eff: 'effective_from'
+            src_ldts: 'loaddate'
+            src_source: 'source'
         sat_order_customer_details:
           vars:
             source: 'v_stg_orders'
-            src_pk: 'CUSTOMER_PK'
-            src_hashdiff: 'CUSTOMER_HASHDIFF'
+            src_pk: 'customer_pk'
+            src_hashdiff: 'customer_hashdiff'
             src_payload:
-              - 'NAME'
-              - 'ADDRESS'
-              - 'PHONE'
-              - 'ACCBAL'
-              - 'MKTSEGMENT'
-              - 'COMMENT'
-            src_eff: 'EFFECTIVE_FROM'
-            src_ldts: 'LOADDATE'
-            src_source: 'SOURCE'
+              - 'name'
+              - 'address'
+              - 'phone'
+              - 'accbal'
+              - 'mktsegment'
+              - 'comment'
+            src_eff: 'effective_from'
+            src_ldts: 'loaddate'
+            src_source: 'source'
         sat_order_lineitem_details:
           vars:
             source: 'v_stg_orders'
-            src_pk: 'LINEITEM_PK'
-            src_hashdiff: 'LINEITEM_HASHDIFF'
+            src_pk: 'lineitem_pk'
+            src_hashdiff: 'lineitem_hashdiff'
             src_payload:
-              - 'COMMITDATE'
-              - 'DISCOUNT'
-              - 'EXTENDEDPRICE'
-              - 'LINE_COMMENT'
-              - 'LINESTATUS'
-              - 'QUANTITY'
-              - 'RECEIPTDATE'
-              - 'RETURNFLAG'
-              - 'SHIPDATE'
-              - 'SHIPINSTRUCT'
-              - 'SHIPMODE'
-              - 'TAX'
-            src_eff: 'EFFECTIVE_FROM'
-            src_ldts: 'LOADDATE'
-            src_source: 'SOURCE'
+              - 'commitdate'
+              - 'discount'
+              - 'extendedprice'
+              - 'line_comment'
+              - 'linestatus'
+              - 'quantity'
+              - 'receiptdate'
+              - 'returnflag'
+              - 'shipdate'
+              - 'shipinstruct'
+              - 'shipmode'
+              - 'tax'
+            src_eff: 'effective_from'
+            src_ldts: 'loaddate'
+            src_source: 'source'
         sat_order_order_details:
           vars:
             source: 'v_stg_orders'
-            src_pk: 'ORDER_PK'
-            src_hashdiff: 'ORDER_HASHDIFF'
+            src_pk: 'order_pk'
+            src_hashdiff: 'order_hashdiff'
             src_payload:
-              - 'ORDERSTATUS'
-              - 'TOTALPRICE'
-              - 'ORDERDATE'
-              - 'ORDERPRIORITY'
-              - 'CLERK'
-              - 'SHIPPRIORITY'
-              - 'ORDER_COMMENT'
-            src_eff: 'EFFECTIVE_FROM'
-            src_ldts: 'LOADDATE'
-            src_source: 'SOURCE'
+              - 'orderstatus'
+              - 'totalprice'
+              - 'orderdate'
+              - 'orderpriority'
+              - 'clerk'
+              - 'shippriority'
+              - 'order_comment'
+            src_eff: 'effective_from'
+            src_ldts: 'loaddate'
+            src_source: 'source'
       stage:
         schema: "stg"
         enabled: true
